# cpbl-analytics

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  held-game-freshness-fix.md  matchups-redesign.md  ml-sim1-plan.md  ml-sim1-review.md  ml-sim1-spec.md  ml-ump2-plan.md  ops-remote-crawler-rollout.md  pyproject.toml  records-redesign.md  umpire-impact-research.md  ux-8.md
.codex/: config.toml
.github/workflows/: ci.yml
.junie/plans/: ux-4-5-interaction-guidelines.md
docs/: AI_RUNBOOK.md  AI_WORKFLOW.md  API-DAILY-SUMMARY1_REVIEW.md  BUGS.md  CONTROL_PLANE_CONTRACT.md  CPBL_SITE_MAP.md  DATABASE_CONTRACT.md  DEP-PREDICT-LEGACY1_REVIEW.md  EDITORIAL_DATA_PIPELINE.md  GAME_RECAP_PRODUCT_SPEC.md  MODEL_ROUTING.md  PITCH_TYPE_PLAN.md  PRODUCT_UX_BLUEPRINT.md  PROPOSAL_EVALUATION.md  TASKS.md  TASKS_LIVE.md  TEMPLATES.md  UI_IMPLEMENTATION_CHECKLIST.md  UI_IMPROVEMENT_PROPOSALS.md  UX-4_REVIEW.md  UX-GAME-HOME1_REVIEW.md  UX-MATCHUP1_REVIEW.md  UX-OUTCOME-HOME_REVIEW.md  UX_REDESIGN_SPEC.md  VENUE_PARK1_CONTRACT.md
docs/archive/: TASKS_ARCHIVE.md  TASKS_PRE_WF12.md
docs/control-plane/: events.jsonl
docs/design/: GAME-RECAP-PA1-TAXONOMY1.md  GAME-RECAP-PA1_CONTRACT.md  GAME_RECAP_DESIGN_BRIEF.md  UI_UX_CONFORMANCE.md  UI_UX_SYSTEM.md  UX-PLAYER-FIELDVIZ1-BRIEF.md  UX-PLAYER-IA1-DECISION.md  UX-PLAYER-IA2-BRIEF.md  UX-PLAYER-SCOPE1-BRIEF.md  pa_transition_taxonomy.v1.json
docs/discovery/: OPS-REMOTE-CRAWL1.md  OPS-REMOTE-CRAWL1_CONTRACTS.md
docs/handoffs/: PRODUCT_UX_BLUEPRINT_CO_DESIGN_PROMPT.md
docs/reference/: RULES_REFERENCE.md  棒球規則.txt  聯盟規章.txt  裁判執法手冊規則補述.txt
docs/research/: BUG-HELD-GAME-FRESHNESS1_REVIEW.md  DISCOVERY-CPBL-RECORDS1_RESULTS.md  DOC-GAME-RECAP1_REVIEW.md  FIELDING_METRIC_DIRECTION.md  GAME-RECAP-DATA1_RESULTS.md  GAME-RECAP-DATA1_REVIEW.md  GAME-RECAP-PA1-BUILD1_HANDOFF.md  GAME-RECAP-PA1-BUILD1_QA.md  GAME-RECAP-PA1-TAXONOMY1_RESULTS.md  GAME-RECAP-PA1-TAXONOMY1_REVIEW.md  GAME-RECAP-PA1_REVIEW.md  GAME-RECAP-STATUS-EXPAND1_REVIEW.md  GAME-RECAP-STATUS1_API_REVIEW.md  GAME-RECAP-STATUS1_RESULTS.md  GAME-RECAP-STATUS1_REVIEW.md  GAME_TM_SHADOW_OBSERVATION.md  ML-UMP1_RESULTS.md  ML-UMP2_RESULTS.md  ML_FIELD_TZ1_FEASIBILITY.md  ML_FIELD_TZ1_REVIEW.md  ML_FIELD_TZ1_REVIEW_IT2.md  ML_FIELD_TZ1_REVIEW_IT3.md  OFFICIAL_DATA_GAP1_RESULTS.md  OPS-REMOTE-CRAWL1_PLAN.md  UI-FIELD-DIAGRAM1_REVIEW.md  UX-ABILITY-FIELD1_PHASE1.md  UX-PLAYER-FIELDVIZ1_RESEARCH.md  UX-PLAYER-FIELDVIZ1_REVIEW.md  UX-PLAYER-IA2_REVIEW.md  UX-PLAYER-SECTIONS1_REVIEW.md
docs/tasks/: API-DAILY-SUMMARY1.md  BUG-ABILITY-DH-LABEL.md  BUG-HELD-GAME-FRESHNESS1.md  BUG-VENUE-ALIAS.md  DATA-EDITORIAL1.md  DEP-PREDICT-LEGACY1.md  DISCOVERY-CPBL-RECORDS1.md  DOC-GAME-RECAP1.md  GAME-RECAP-DATA1.md  GAME-RECAP-PA1-BUILD1.md  GAME-RECAP-PA1-EXPAND1.md  GAME-RECAP-PA1-TAXONOMY1.md  GAME-RECAP-PA1.md  GAME-RECAP-STATUS-EXPAND1.md  GAME-RECAP-STATUS1.md  GAME-RECAP-WP-API1.md  GAME-RECAP-WP-VAL1.md  INGEST-ADV-EXPAND1.md  INGEST-ADV-RECONCILE1.md  INGEST-DEEP-TM-BACKFILL1.md  INGEST-DEEP-TRACKMAN1.md  INGEST-GAME-TM-REFACTOR1.md  INGEST-RECORDS-HR1.md  INIT-GAME-RECAP.md  INIT-OFFICIAL-DATA1.md  INIT-PRODUCT-UX.md  ML-PT3.md  (+48 more)
migrations/: 001_init.sql  002_games.sql  003_game_features.sql  004_split_run_features.sql  005_pitching_current.sql  006_batting_team_current.sql  007_starter_adv_features.sql  008_batting_counting.sql  009_fielding_current.sql  010_pitching_sv_hld.sql  011_matchups.sql  012_vs_team_splits.sql  013_pitching_current_full.sql  014_batting_current_full.sql  015_refresh_log.sql  016_game_log.sql  017_advanced_stats.sql  018_pitch_tracking.sql  019_game_box.sql  020_team_standings.sql  021_fielding_catcher.sql  022_splits_pk_itemname.sql  023_advanced_metrics_jsonb.sql  024_team_venue_dim.sql  025_coaches.sql  026_outcome_extra_features.sql  027_managers.sql  028_overseas.sql  029_player_awards.sql  030_wiki_player_info.sql  031_retired_numbers.sql  032_outcome_team_features.sql  033_outcome_current_batting.sql  034_outcome_baserun_defense.sql  035_player_transactions.sql  036_championship_members.sql  037_fielding_kind_code.sql  038_advanced_kind_code.sql  039_game_detail.sql  040_player_bio.sql  (+26 more)
scripts/: ability_snapshot.py  audit_game_recap_data.py  backup-cpbl-prod.sh  capture_player_ia_fixtures.py  com.cpbl.scrape-daily.plist  pa_transition_taxonomy.py  reconcile_game_tm.py  refresh-cpbl-prod.sh  refresh_status.py  rehearsal_backfill.py  rehearsal_pa_build.py  scrape-daily.sh  sync_deep_tm_prod.py  verify_deep_tm_backfill.py  verify_refresh_info.py  workflow_ledger.py
tests/: test_ability_card.py  test_advanced_reconcile.py  test_advanced_snapshot_schema.py  test_api_contract.py  test_backup_cpbl_prod.py  test_championship_managers.py  test_championships.py  test_coach_disambiguation.py  test_coaches_guard.py  test_coaches_history.py  test_completion.py  test_daily_summary.py  test_editorial_ingest.py  test_game_recap_data_audit.py  test_game_recap_pa_expand.py  test_game_recap_status.py  test_game_source_revisions.py  test_game_tm_shadow.py  test_matchup_insights.py  test_matchup_insights_api.py  test_matchup_queries.py  test_migration_rerun.py  test_outcome_pa_api.py  test_outcome_simple.py  test_pa_backtest.py  test_pa_builder.py  test_pa_sim.py  test_pa_transition_taxonomy.py  test_pitch_tracking_deep.py  test_pitch_tracking_game.py  test_pure_helpers.py  test_records_api.py  test_roster.py  test_route_snapshot.py  test_scrape_daily.py  test_team_history.py  test_umpire_impact.py  test_umpire_impact_data.py  test_venue_factors.py  test_verify_refresh_info.py  (+1 more)
web/: .gitignore  Dockerfile  next-env.d.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
(+281 files in other folders)
