[project]
name = "cpbl-analytics"
version = "0.1.0"
description = "CPBL 棒球分析與成績預測子專案（PersonalWebsite sub-project）"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "polars>=1.17",
    "httpx>=0.28",
    "psycopg[binary,pool]>=3.2",
    "pydantic-settings>=2.7",
    "lightgbm>=4.5",
    "scikit-learn>=1.6",
    "numpy>=2.1",
]

[project.scripts]
cpbl-backfill = "cpbl.ingest.run_backfill:main"
cpbl-scrape-games = "cpbl.ingest.run_scrape:main"
cpbl-scrape-stats = "cpbl.ingest.run_scrape_stats:main"
cpbl-scrape-fighting = "cpbl.ingest.run_scrape_fighting:main"
cpbl-scrape-detail = "cpbl.ingest.run_scrape_detail:main"
cpbl-refresh-recent = "cpbl.ingest.run_refresh_recent:main"
cpbl-scrape-gamelog = "cpbl.ingest.run_scrape_gamelog:main"
cpbl-scrape-advanced = "cpbl.ingest.run_scrape_advanced:main"
cpbl-scrape-pitches = "cpbl.ingest.run_scrape_pitches:main"
cpbl-backfill-season = "cpbl.ingest.run_backfill_season:main"
cpbl-scrape-standings = "cpbl.ingest.run_scrape_standings:main"
cpbl-scrape-coaches = "cpbl.ingest.run_scrape_coaches:main"
cpbl-build-features = "cpbl.features.run_build_features:main"
cpbl-train = "cpbl.models.train:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]
# 本機爬蟲專用：官網主站(www.cpbl.com.tw)加了 HiNet CDN 反爬 JS 挑戰，純 httpx 會 428；
# 改用 Playwright 開頁過挑戰後 page.evaluate(fetch) 發 API。生產不爬蟲、不需此群組。
scrape = [
    "playwright>=1.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpbl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# 忽略風格噪音：行長（中文註解/SQL）、緊湊 state 更新分號、迴圈內即用閉包假陽性、W/L 命名
ignore = ["E501", "E702", "B023", "E741", "UP031"]
