[project]
name = "cpbl-analytics"
version = "0.1.0"
description = "CPBL 棒球分析與成績預測子專案（PersonalWebsite sub-project）"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "polars>=1.17",
    "httpx>=0.28",
    "psycopg[binary,pool]>=3.2",
    "pydantic-settings>=2.7",
    "lightgbm>=4.5",
    "scikit-learn>=1.6",
    "numpy>=2.1",
    "google-auth[requests]>=2.40",
]

[project.scripts]
cpbl-backfill = "cpbl.ingest.run_backfill:main"
cpbl-scrape-games = "cpbl.ingest.run_scrape:main"
cpbl-scrape-stats = "cpbl.ingest.run_scrape_stats:main"
cpbl-scrape-fighting = "cpbl.ingest.run_scrape_fighting:main"
cpbl-scrape-detail = "cpbl.ingest.run_scrape_detail:main"
cpbl-scrape-legends = "cpbl.ingest.run_scrape_legends:main"
cpbl-scrape-transactions = "cpbl.ingest.run_scrape_transactions:main"
cpbl-refresh-recent = "cpbl.ingest.run_refresh_recent:main"
cpbl-scrape-gamelog = "cpbl.ingest.run_scrape_gamelog:main"
cpbl-scrape-advanced = "cpbl.ingest.run_scrape_advanced:main"
cpbl-reconcile-advanced = "cpbl.ingest.run_reconcile_advanced:main"
cpbl-scrape-pitches = "cpbl.ingest.run_scrape_pitches:main"
cpbl-scrape-game-pitches = "cpbl.ingest.run_scrape_game_pitches:main"
cpbl-shadow-game-tm = "cpbl.ingest.run_shadow_game_tm:main"
cpbl-backfill-season = "cpbl.ingest.run_backfill_season:main"
cpbl-scrape-standings = "cpbl.ingest.run_scrape_standings:main"
cpbl-scrape-coaches = "cpbl.ingest.run_scrape_coaches:main"
cpbl-scrape-roster = "cpbl.ingest.run_scrape_roster:main"
cpbl-scrape-managers = "cpbl.ingest.run_scrape_managers:main"
cpbl-scrape-overseas = "cpbl.ingest.run_scrape_overseas:main"
cpbl-scrape-coaches-history = "cpbl.ingest.run_scrape_coaches_history:main"
cpbl-scrape-awards = "cpbl.ingest.run_scrape_awards:main"
cpbl-scrape-wiki = "cpbl.ingest.run_scrape_wiki:main"
cpbl-scrape-retired = "cpbl.ingest.run_scrape_retired:main"
cpbl-scrape-bio = "cpbl.ingest.run_scrape_bio:main"
cpbl-scrape-field = "cpbl.ingest.run_scrape_field:main"
cpbl-live-game = "cpbl.ingest.run_live_game:main"
cpbl-build-championships = "cpbl.ingest.run_build_championships:main"
cpbl-verify-splits = "cpbl.ingest.run_verify_splits:main"
cpbl-check-coverage = "cpbl.ingest.run_check_coverage:main"
cpbl-build-splits = "cpbl.ingest.run_build_splits:main"
cpbl-anchor-career = "cpbl.ingest.run_anchor_career:main"
cpbl-ingest-editorial = "cpbl.ingest.run_ingest_editorial:main"
cpbl-build-sabr = "cpbl.models.run_build_sabr:main"
cpbl-build-features = "cpbl.features.run_build_features:main"
cpbl-train = "cpbl.models.train:main"
cpbl-train-pitching = "cpbl.models.train_pitching:main"
cpbl-train-outcome = "cpbl.models.outcome_gbm:main"
cpbl-train-outcome-simple = "cpbl.models.run_train_outcome_simple:main"
cpbl-train-pa-sim = "cpbl.models.run_train_pa_sim:main"
cpbl-classify-pitches = "cpbl.models.run_classify_pitches:main"
cpbl-classify-pitches-v2 = "cpbl.models.pitch_type_v2:main"
cpbl-research-umpire-impact = "cpbl.models.run_umpire_impact:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]
# 本機爬蟲專用：官網主站(www.cpbl.com.tw)加了 HiNet CDN 反爬 JS 挑戰，純 httpx 會 428；
# 改用 Playwright 開頁過挑戰後 page.evaluate(fetch) 發 API。生產不爬蟲、不需此群組。
scrape = [
    "playwright>=1.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cpbl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# repo root 進 sys.path：測試之間會互相 import（如 test_championship_managers 取用
# test_championships 的種子列）。少了這行，乾淨環境下整套 collection 就失敗。
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# 忽略風格噪音：行長（中文註解/SQL）、緊湊 state 更新分號、迴圈內即用閉包假陽性、W/L 命名
ignore = ["E501", "E702", "B023", "E741", "UP031"]
